# ParaGraph

./: .gitignore  LICENSE.txt  Makefile  NOTICE.txt
ParaGraph/para/graph/: exception.cpp  exception.h  graph.cpp  graph.h  math.cpp  math.h  ml_graph.cpp  ml_graph.h
ParaGraphTest/para/graph/: graph_test.cpp  graph_test.h  graph_test_utils.cpp  graph_test_utils.h  main.cpp  math_test.cpp  math_test.h  ml_graph_builder_test.cpp  tensor_function_factory_test.cpp  tensor_function_factory_test.h  unit_test.cpp  unit_test.h
doc/tex/: BackPropagation.tex  MultiLayerPerceptron.tex  TensorFunctions.tex
src/: CMakeLists.txt
src/ParaGraph/: CMakeLists.txt
src/ParaGraph/include/para/graph/: exception.h  functional.h  graph.h  iterator_facade.h  math.h  ml_graph.h
src/ParaGraph/src/: exception.cpp  graph.cpp  math.cpp  ml_graph.cpp
src/ParaGraphTest/: CMakeLists.txt
src/ParaGraphTest/src/: graph_test.cpp  graph_test_utils.cpp  main.cpp  math_test.cpp  math_test.h  ml_graph_builder_test.h  tensor_function_factory_test.cpp  unit_test.cpp
